<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    android:layout_centerInParent="true" >


    <Space
        android:id="@+id/space_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:layout_alignParentTop="true"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/space_middle"
        android:layout_centerInParent="true"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/title_exo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/space_middle"
        android:gravity="center"
        android:text="@string/ex1"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/linear_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/title_exo1">


        <TextView
            android:id="@+id/tv_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/longitude"/>

        <TextView
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linear_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/linear_longitude">


        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/latitude"/>


        <TextView
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/title_exo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/linear_latitude"
        android:gravity="center"
        android:text="@string/ex2"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/linear_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/title_exo2">


        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/distance"/>


        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_podometre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/linear_distance">

        <TextView
            android:id="@+id/tv_podometre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/podometre" />

        <TextView
            android:id="@+id/podometre"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:hint="@string/marcher"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_calcul_podo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/linear_podometre">

        <TextView
            android:id="@+id/tv_distance_podometre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/calcul_podometre" />

        <TextView
            android:id="@+id/distance_podometre"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>


